objects/ASI_HK_CRM_Customer_Product_Price__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_HK_Channel__c</fullName>
        <label>Channel</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Bottle_Price__c</fullName>
        <label>Bottle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Case_Price__c</fullName>
        <label>Case Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Cus_Product_Price_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer Product Price External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Product Prices</relationshipLabel>
        <relationshipName>Customer_Product_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SKU_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Customer Product Prices</relationshipLabel>
        <relationshipName>Customer_Product_Price_To_SKU_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Packaging_Size__c</fullName>
        <formula>ASI_HK_CRM_SKU_Lookup__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Packing__c</fullName>
        <label>Packing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Std_Bottle_Size__c</fullName>
        <formula>ASI_HK_CRM_SKU_Lookup__r.ASI_HK_CRM_Std_Bottle_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Std Bottle Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Product Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_HK_CRM_Customer_Name__c</columns>
        <columns>ASI_HK_CRM_SKU_Lookup__c</columns>
        <columns>ASI_HK_CRM_Bottle_Price__c</columns>
        <columns>ASI_HK_CRM_Case_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_TH</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Customer_Name__c</columns>
        <columns>ASI_HK_CRM_SKU_Lookup__c</columns>
        <columns>ASI_HK_CRM_Effective_Date__c</columns>
        <columns>ASI_HK_CRM_Expiry_Date__c</columns>
        <columns>ASI_HK_CRM_Bottle_Price__c</columns>
        <columns>ASI_HK_CRM_Case_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Customer_Product_Price__c.ASI_TH_CRM_Customer_Product_Price</value>
        </filters>
        <label>All-TH</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TW</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Customer_Name__c</columns>
        <columns>ASI_HK_CRM_SKU_Lookup__c</columns>
        <columns>ASI_HK_CRM_Effective_Date__c</columns>
        <columns>ASI_HK_CRM_Expiry_Date__c</columns>
        <columns>ASI_HK_CRM_Bottle_Price__c</columns>
        <columns>ASI_HK_CRM_Case_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Customer_Product_Price__c.ASI_CRM_TW_Cusotmer_Product_Price</value>
        </filters>
        <label>All-TW</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPP-{000000}</displayFormat>
        <label>Customer Product Price</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Prices</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Channel_PAF_Price</fullName>
        <active>true</active>
        <label>ASI CRM HK Channel PAF Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Customer_PAF_Price</fullName>
        <active>true</active>
        <label>ASI CRM HK Customer PAF Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Cusotmer_Product_Price</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Cusotmer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Customer_Product_Price</fullName>
        <active>true</active>
        <label>HK CRM Customer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Customer_Product_Price</fullName>
        <active>true</active>
        <label>TH CRM Customer Product Price</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>